log
Wed, Mar 19, 2025  8:42:45 AM: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
3f6cb15
Wed, Mar 19, 2025  8:42:50 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
34633ae
Wed, Mar 19, 2025  8:43:39 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
588d826
Wed, Mar 19, 2025  8:45:24 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
37d93c5
Wed, Mar 19, 2025  8:46:37 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
3523466
Wed, Mar 19, 2025  8:49:50 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
11715a9
Wed, Mar 19, 2025  8:50:33 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
089186f
Wed, Mar 19, 2025  8:50:51 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
901706c
Wed, Mar 19, 2025  8:51:27 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
8ba4360
Wed, Mar 19, 2025  8:52:00 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
cafda98
Wed, Mar 19, 2025  8:58:31 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
5d05003
Wed, Mar 19, 2025  8:59:03 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
5baabc8
Wed, Mar 19, 2025  8:59:15 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
9ee76f6
Wed, Mar 19, 2025  9:02:40 AM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d5307ea
Wed, Mar 19, 2025  9:05:42 AM: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:23: error: expected ')' before ';' token
    while( (*num) < 11 ;  )
                       ^
exercises.c:53:4: error: expected ';' before '}' token
    }
    ^
Compilation failed
342d272
